keywords in paper.

--- a/ICFP2012/paper.tex
+++ b/ICFP2012/paper.tex
@@ -78,8 +78,8 @@ tool-chain.
 \terms
 Languages, Verification
 
-%% \keywords
-%% keyword1, keyword2
+\keywords
+embedded domain-specific language, compiler, verification
 
 
 %\todo{emails for sebastian, nis?}
