made my first real updates

--- a/ISSE12/conclusion.tex
+++ b/ISSE12/conclusion.tex
@@ -72,7 +72,7 @@ monitoring protocols.
 We have not addressed the \emph{steering} problem of how to address faults once
 they are detected.  Steering is critical at the application level; for example,
 if an RV monitor detects that a control system has violated its permissible
-operational envelop.
+operational envelope.
 
 \paragraph{Faults.}
 We have built a system to detect both hardware and software (logical) faults.
