--- a/ISSE12/mybib.bib
+++ b/ISSE12/mybib.bib
@@ -44,7 +44,7 @@
 }
 
 @misc{Hesselink2005,
-  title = {The Boyer-Moore Majority Vote Algorithm},
+  title = {The {B}oyer-{M}oore Majority Vote Algorithm},
   author = {Wim H. Hesselink},
   year = {2005}
 }
